# robotframework-live-trace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/RobotLiveTrace/: __init__.py  gui.py  listener.py  message.py  version.py
tests/: test_gui.py  test_listener.py
